# EasyqMR

./: README.md  pyproject.toml
software_1/: main.py
software_1/Alerts/Error/: ErrorWarning.py
software_1/Alerts/Processing/: Processing1.py
software_1/FunctionDashboard/: MaskSelection.py  ParameterGraphAnalysis.py  ROI.py  SlidersChangeImage.py
software_1/ImpExpMRI/: OpenMRI.py  Preview.py  UIProgressStepOpen.py  scratch.py
software_1/ImpExpMRI/Dicom/: OpenDicom.py  Preview.py
software_1/ImpExpMRI/NIfTI/: OpenNII.py
software_1/ImpExpMRI/Preprocessing/: FilterSlices.py  FormattingMRI.py  OrderSlices.py
software_1/ImpExpMRI/Preview/: MRIPreviewSample.py  Preview.py
software_1/ImpExpMRI/ProcessingFile/: ClassificationType.py  FormattingMRI.py  GetInfoPixelMatrix.py  MRIPreviewSample.py  OrderSlices.py
software_1/PostProcessing/: InitParMapGeneration.py
software_1/PostProcessing/MappingTypes/: T2.py
software_1/Preprocessing/: BrainExtraction.py  FormattingMRI.py  FormattingMatrix.py  MRIPreviewSample.py  MRIcoregistration.py  getinfo.py
software_1/Preprocessing/Dicom/: ClassificationType.py  FilterSlices.py  MRIPreviewSample.py  OrderSlicesDicom.py
software_1/QSS/: StyleSheetTableOpenMRI.qss
software_1/Test/: saveMap.py
software_1/qt.ui/: OpenMRI.ui  Responsive.ui  init.ui  init2.ui  main.ui  preview.ui  test.ui
src/easyqmr/: main.py
src/easyqmr/Alerts/: About.py
src/easyqmr/FunctionDashboard/: MaskSelection.py  ROI.py  SlidersChangeImage.py
src/easyqmr/ImpExpMRI/: ExportMap.py  OpenMRI.py
src/easyqmr/PostProcessing/: CheckMRItoMap.py  (+1 more)
(+24 files in other folders)
