[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyqmr"
version = "0.0.0"
authors = [
  { name="Marcio Campos", email="marcio.campos6@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pyqt5",
    "qtpy",
    "nibabel",
    "dipy",
    "pydicom",
    "opencv-python-headless",
    "SimpleITK"
]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
easyqmr = "easyqmr.main:main"
